Darker yet darker shadows cutting deeper - fixed dark mode

--- a/projekt05/public/cookie_baner.css
+++ b/projekt05/public/cookie_baner.css
@@ -1,28 +1,5 @@
 /* Cookie Banner Container */
 
-html
-{
-    --header-color: beige;
-    --background: aliceblue;
-    --main-color: rgb(220, 220, 220);
-    --tile-color:cadetblue;
-    --footer-color:rgb(204, 179, 190);
-    --text-color-normal: #000;
-    --icon-color: transparent;
-    background-color: var(--background);
-    color: var(--text-color-normal);
-}
-html[data-theme='dark'] {
-    --header-color: rgb(14, 8, 51);
-    --background: rgb(26, 21, 2);
-    --main-color: rgb(36, 36, 36);
-    --tile-color:rgb(194, 171, 72);
-    --footer-color:rgb(9, 56, 5);
-    --text-color-normal: #e9e9e9;
-    --icon-color: white;
-    background-color: var(--background);
-    color: var(--text-color-normal);
-}
 
 .cookie-container {
   /* Positioning the banner fixed at the bottom-left corner */
